Fix various warnings and typos, and removesome unused methods in some of the model classes
Signed-off-by: Jakub Scholz <www@scholzj.com>